Add primer.ottr.xyz for CORS. remove fetching from lutrabox.js